Added a bit of text in the abstract.

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -30,7 +30,11 @@
 \thispagestyle{empty}
 \begin{multicols}{2}
 \begin{abstract}
-...
+This document describes the development of the Paladim programming language,
+which is a pascal-like imperative language with functions and procedures, which
+uses multidimensional regular arrays.
+
+Each subtask will be addressed in its own subsection of the document.
 \end{abstract}
 \vfill
 \columnbreak
