Added development schedule section and templated out subtasks.

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -2,6 +2,7 @@
 
 \usepackage{a4wide} 			% save some rainforests
 \usepackage{amsmath,amssymb}	% for mathematical notation
+\usepackage{float} 				% put things exactly where I tell you!
 \usepackage{multicol} 			% for column layout
 \usepackage[utf8]{inputenc} 	% can we has UTF-8, plox
 
@@ -44,6 +45,61 @@ Each subtask will be addressed in its own subsection of the document.
 \clearpage
 \section{Overview}
 ...
+
+\subsection{Planned schedule}
+Having a development schedule helps us keep things organized and makes sure
+that we can meet the deadlines. We provide our development schedule for our
+own benefit and such that the instructor can provide feedback on possible
+difficulties we may encounter, such that it can adjust it accordingly.
+\begin{figure}[H]
+	\center
+	\begin{tabular}{|l|c|c|c|}
+		\hline
+		{\bf Subtask} & {\bf Status} & {\bf Expected} & {\bf Deadline} \\ \hline
+		Parser & N/A & N/A & 6th December 2014 \\ \hline
+		Arithmetic and logic & N/A & N/A & N/A \\ \hline
+		Type inference- and checking & N/A & N/A & N/A \\ \hline
+		Code generation & N/A & N/A & N/A \\ \hline
+		Semantics & N/A & N/A & N/A \\ \hline
+	\end{tabular}
+	\label{table:schedule}
+	\caption{Our planned development schedule}
+\end{figure}
+The development schedule is, however, subject to change. For reasons given
+above, and unforeseen difficulties may or may not force us to reschedule.
+
+\section{Tasks}
+...
+
+\subsection{Parser}
+...
+
+\subsubsection{Tests}
+{\it not applicable at this time}
+
+\subsection{Arithmetic and logic}
+...
+
+\subsubsection{Tests}
+{\it not applicable at this time}
+
+\subsection{Type inference- and checking}
+...
+
+\subsubsection{Tests}
+{\it not applicable at this time}
+
+\subsection{Code generation}
+...
+
+\subsubsection{Tests}
+{\it not applicable at this time}
+
+\subsection{Semantics}
+...
+
+\subsubsection{Tests}
+{\it not applicable at this time}
 
 \end{document}
 
