--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -1,5 +1,7 @@
 \documentclass[11pt,a4paper]{article}
 
+% Disagreed : a4paper document option gives the optimal number of chars per
+% line (around 66 if I remember correctly).
 \usepackage{a4wide} 			% save some rainforests
 \usepackage{amsmath,amssymb}	% for mathematical notation
 \usepackage{float} 				% put things exactly where I tell you!
@@ -7,18 +9,18 @@
 \usepackage[utf8]{inputenc} 	% can we has UTF-8, plox
 
 \title
-{
+{%
 	{\large Milestone Report}\\
 	Compilers
 }
 
 \author
-{
-	Andreas ...?\\
+{%
+	Andreas Dall Løfgren\\
 	{\tt abc123@alumni.ku.dk}
 	\and
 	Paw Saabye\\
-	{\tt abc123@alumni.ku.dk}
+	{\tt hwx245@alumni.ku.dk}
 	\and
 	Casper B. Hansen\\
 	{\tt fvx507@alumni.ku.dk}
@@ -44,7 +46,7 @@ Each subtask will be addressed in its own subsection of the document.
 
 \clearpage
 \section{Overview}
-...
+\ldots
 
 \subsection{Planned schedule}
 Having a development schedule helps us keep things organized and makes sure
@@ -69,34 +71,34 @@ The development schedule is, however, subject to change. For reasons given
 above, and unforeseen difficulties may or may not force us to reschedule.
 
 \section{Tasks}
-...
+\ldots
 
 \subsection{Parser}
-...
+\ldots
 
 \subsubsection{Tests}
 {\it not applicable at this time}
 
 \subsection{Arithmetic and logic}
-...
+\ldots
 
 \subsubsection{Tests}
 {\it not applicable at this time}
 
 \subsection{Type inference- and checking}
-...
+\ldots
 
 \subsubsection{Tests}
 {\it not applicable at this time}
 
 \subsection{Code generation}
-...
+\ldots
 
 \subsubsection{Tests}
 {\it not applicable at this time}
 
 \subsection{Semantics}
-...
+\ldots
 
 \subsubsection{Tests}
 {\it not applicable at this time}
