--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -8,13 +8,13 @@
 \usepackage{multicol} 			% for column layout
 \usepackage[utf8]{inputenc} 	% can we has UTF-8, plox
 
-\title
+\title%
 {%
 	{\large Milestone Report}\\
 	Compilers
 }
 
-\author
+\author%
 {%
 	Andreas Dall Løfgren\\
 	{\tt abc123@alumni.ku.dk}
@@ -40,7 +40,7 @@ uses multidimensional regular arrays.
 Each subtask will be addressed in its own subsection of the document.
 \end{abstract}
 \vfill
-\columnbreak
+\columnbreak%
 \tableofcontents
 \end{multicols}
 
@@ -54,7 +54,7 @@ that we can meet the deadlines. We provide our development schedule for our
 own benefit and such that the instructor can provide feedback on possible
 difficulties we may encounter, such that it can adjust it accordingly.
 \begin{figure}[H]
-	\center
+	\centering
 	\begin{tabular}{|l|c|c|c|}
 		\hline
 		{\bf Subtask} & {\bf Status} & {\bf Expected} & {\bf Deadline} \\ \hline
@@ -77,31 +77,31 @@ above, and unforeseen difficulties may or may not force us to reschedule.
 \ldots
 
 \subsubsection{Tests}
-{\it not applicable at this time}
+{\it not applicable at this time}%
 
 \subsection{Arithmetic and logic}
 \ldots
 
 \subsubsection{Tests}
-{\it not applicable at this time}
+{\it not applicable at this time}%
 
 \subsection{Type inference- and checking}
 \ldots
 
 \subsubsection{Tests}
-{\it not applicable at this time}
+{\it not applicable at this time}%
 
 \subsection{Code generation}
 \ldots
 
-\subsubsection{Tests}
-{\it not applicable at this time}
+\subsubsection{Tests}%
+{\it not applicable at this time}%
 
 \subsection{Semantics}
 \ldots
 
 \subsubsection{Tests}
-{\it not applicable at this time}
+{\it not applicable at this time}%
 
 \end{document}
 
