Added some text to milestone.tex

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -70,8 +70,8 @@ difficulties we may encounter, such that it can adjust it accordingly.
 The development schedule is, however, subject to change. For reasons given
 above, and unforeseen difficulties may or may not force us to reschedule.
 
-\section{Tasks}
-\ldots
+\section{Progress}
+This section discusses the advancements, we have made in the above tasks.
 
 \subsection{Parser}
 \ldots
