Added some text about testing the Parser

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -78,6 +78,14 @@ This section discusses the advancements, we have made in the above tasks.
 
 \subsubsection{Tests}
 {\it not applicable at this time}%
+\paragraph{One-shot testing}
+The testing has so far only involved single-shot testing, insofar as it has
+been applicable.
+
+Generally we have tested the implementation by recompiling the source, and
+testing each file, thus, letting us see 1) the compiler output for any
+warnings/errors and 2) the programme output, so that we may verify that it
+is correct.
 
 \subsection{Arithmetic and logic}
 \ldots
