--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -17,7 +17,7 @@
 \author%
 {%
 	Andreas Dall Løfgren\\
-	{\tt abc123@alumni.ku.dk}
+	{\tt jgc330@alumni.ku.dk}
 	\and
 	Paw Saabye\\
 	{\tt hwx245@alumni.ku.dk}
