tilføjet en smule til parserdelen

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -74,7 +74,10 @@ above, and unforeseen difficulties may or may not force us to reschedule.
 This section discusses the advancements, we have made in the above tasks.
 
 \subsection{Parser}
-\ldots
+We have made the new parser support the entire syntax.
+We have changed the syntax og LVAL and value to include int*int so they can pass down position.
+We have made two seperate conditional statements if-then and if-then-else.
+If-then has been given a lower precedence than if-then-else to resolve a conflict.
 
 \subsubsection{Tests}
 {\it not applicable at this time}%
