--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -74,10 +74,9 @@ above, and unforeseen difficulties may or may not force us to reschedule.
 This section discusses the advancements, we have made in the above tasks.
 
 \subsection{Parser}
-We have made the new parser support the entire syntax.
-We have changed the syntax og LVAL and value to include int*int so they can pass down position.
-We have made two seperate conditional statements if-then and if-then-else.
-If-then has been given a lower precedence than if-then-else to resolve a conflict.
+The new parser was added to where LL1parser was before.
+All of the dependencies in Lexer.lex and Driver.sml have been corrected and Parser.grm has been added instead.
+The grammer rules specified in figure 3 in groupproject.pdf have been added.
 
 \subsubsection{Tests}
 {\it not applicable at this time}%
