status på de andre task

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -95,25 +95,25 @@ warnings/errors and 2) the programme output, so that we may verify that it
 is correct.
 
 \subsection{Arithmetic and logic}
-\ldots
+We have started working in Type.sml. Times, Div Or and Not should be at least partially funtional.
 
 \subsubsection{Tests}
 {\it not applicable at this time}%
 
 \subsection{Type inference- and checking}
-\ldots
+Same as Arithmetic and logic
 
 \subsubsection{Tests}
 {\it not applicable at this time}%
 
 \subsection{Code generation}
-\ldots
+We have not yet started on this part.
 
 \subsubsection{Tests}%
 {\it not applicable at this time}%
 
 \subsection{Semantics}
-\ldots
+We have not yet started on this part.
 
 \subsubsection{Tests}
 {\it not applicable at this time}%
