Corrected a4-stuff, and made things take up a bit more space - oooh the laziness! :P

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -1,8 +1,5 @@
-\documentclass[11pt,a4paper]{article}
+\documentclass[11pt]{article}
 
-% Disagreed : a4paper document option gives the optimal number of chars per
-% line (around 66 if I remember correctly).
-\usepackage{a4wide} 			% save some rainforests
 \usepackage{amsmath,amssymb}	% for mathematical notation
 \usepackage{float} 				% put things exactly where I tell you!
 \usepackage{multicol} 			% for column layout
