Added deadline dates.

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -58,7 +58,7 @@ difficulties we may encounter, such that it can adjust it accordingly.
 	\begin{tabular}{|l|c|c|c|}
 		\hline
 		{\bf Subtask} & {\bf Status} & {\bf Expected} & {\bf Deadline} \\ \hline
-		Parser & N/A & N/A & 6th December 2014 \\ \hline
+		Parser & Done & On time & 6th December 2014 \\ \hline
 		Arithmetic and logic & N/A & N/A & N/A \\ \hline
 		Type inference- and checking & N/A & N/A & N/A \\ \hline
 		Code generation & N/A & N/A & N/A \\ \hline
