--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -81,7 +81,12 @@ so that Absyn.LValue<LVAL> became Absyn.LValue<(LVAL*(int*int))> and Absyn.value
 If-then was given precedence to if-then-else to resolve a conflict, where multiple statements were present.
 
 \subsubsection{Tests}
-{\it not applicable at this time}%
+We didn't have enough resources to put extensive efforts into testing. We did,
+however run each and every Paladim program provided in the DATA folder. By the
+time the parser had been succesfully migrated to the bottom-up method using
+context-free gramma in {\tt Parser.grm}, from the top-down {\tt LL1Parser.sml}
+all of these programs ran without any parser errors.
+
 \paragraph{One-shot testing}
 The testing has so far only involved single-shot testing, insofar as it has
 been applicable.
