--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -49,7 +49,7 @@ Each subtask will be addressed in its own subsection of the document.
 Having a development schedule helps us keep things organized and makes sure
 that we can meet the deadlines. We provide our development schedule for our
 own benefit and such that the instructor can provide feedback on possible
-difficulties we may encounter, such that it can adjust it accordingly.
+difficulties we may encounter, such that it can be  adjusted accordingly.
 \begin{figure}[H]
 	\centering
 	\begin{tabular}{|l|c|c|c|}
@@ -73,7 +73,7 @@ This section discusses the advancements, we have made in the above tasks.
 \subsection{Parser}
 The new parser was added to where LL1parser was before.
 All of the dependencies in Lexer.lex and Driver.sml have been corrected and Parser.grm has been added instead.
-The grammer rules specified in figure 3 in groupproject.pdf have been added.
+The grammar rules specified in figure 3 in groupproject.pdf have been added.
 
 During the project we had trouble with LVAL and value, which we solved by adding the position to the type
 so that Absyn.LValue<LVAL> became Absyn.LValue<(LVAL*(int*int))> and Absyn.value similarly.
