deadlines changed from N/A and small overview written

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -43,7 +43,9 @@ Each subtask will be addressed in its own subsection of the document.
 
 \clearpage
 \section{Overview}
-\ldots
+We were given a compiler code with a top-down parser. This is very inefficient 
+and we had to change it to a bottom-up parser. We discarded all the settings 
+called LL1 and replaced it with 'parser' which would refer to our own parser. 
 
 \subsection{Planned schedule}
 Having a development schedule helps us keep things organized and makes sure
@@ -55,11 +57,11 @@ difficulties we may encounter, such that it can be  adjusted accordingly.
 	\begin{tabular}{|l|c|c|c|}
 		\hline
 		{\bf Subtask} & {\bf Status} & {\bf Expected} & {\bf Deadline} \\ \hline
-		Parser & N/A & N/A & 6th December 2014 \\ \hline
-		Arithmetic and logic & N/A & N/A & N/A \\ \hline
-		Type inference- and checking & N/A & N/A & N/A \\ \hline
-		Code generation & N/A & N/A & N/A \\ \hline
-		Semantics & N/A & N/A & N/A \\ \hline
+		Parser & N/A & N/A & 6th December 2013 \\ \hline
+		Arithmetic and logic & N/A & N/A & 20th December 2013 \\ \hline
+		Type inference- and checking & N/A & N/A & 20th December 2013 \\ \hline
+		Code generation & N/A & N/A & 20th December 2013 \\ \hline
+		Semantics & N/A & N/A & 20th December 2013 \\ \hline
 	\end{tabular}
 	\label{table:schedule}
 	\caption{Our planned development schedule}
