Added new text file

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -87,7 +87,7 @@ time the parser had been succesfully migrated to the bottom-up method using
 context-free gramma in {\tt Parser.grm}, from the top-down {\tt LL1Parser.sml}
 all of these programs ran without any parser errors.
 
-\paragraph{One-shot testing}
+\paragraph{Single-shot testing}
 The testing has so far only involved single-shot testing, insofar as it has
 been applicable.
 
