--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -99,6 +99,8 @@ is correct.
 \subsection{Arithmetic and logic}
 We have started working in Type.sml. Times, Div Or and Not should be at least partially funtional.
 
+Our current implementation, though not fully functional, partially supports 
+
 \subsubsection{Tests}
 {\it not applicable at this time}%
 
