type inference written

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -45,7 +45,8 @@ Each subtask will be addressed in its own subsection of the document.
 \section{Overview}
 We were given a compiler code with a top-down parser. This is very inefficient 
 and we had to change it to a bottom-up parser. We discarded all the settings 
-called LL1 and replaced it with 'parser' which would refer to our own parser. 
+called LL1 and replaced it with 'parser' which would refer to our own parser 
+in attempt to create the context free Paladim language. 
 
 \subsection{Planned schedule}
 Having a development schedule helps us keep things organized and makes sure
@@ -122,13 +123,16 @@ warnings/errors and 2) the programme output, so that we may verify that it
 is correct.
 
 \subsection{Arithmetic and logic}
-We have started working in Type.sml. Times, Div Or and Not should be at least partially funtional.
+We have started working in Type.sml. Times, Div Or and Not should be 
+at least partially funtional.
 
 \subsubsection{Tests}
 {\it not applicable at this time}%
 
 \subsection{Type inference- and checking}
-Same as Arithmetic and logic
+We have begun working on the type inference- and checking, however we 
+have yet to gain sufficient overview over the task, such that we can 
+produce any definite conclusions as to where we are.
 
 \subsubsection{Tests}
 {\it not applicable at this time}%
