Added a single space to fix indentation

--- a/G/milestone.tex
+++ b/G/milestone.tex
@@ -3,7 +3,7 @@
 \usepackage{amsmath,amssymb}	% for mathematical notation
 \usepackage{float} 				% put things exactly where I tell you!
 \usepackage{multicol} 			% for column layout
-\usepackage[utf8]{inputenc} 	% can we has UTF-8, plox
+\usepackage[utf8x]{inputenc} 	% can we has UTF-8, plox
 
 \title%
 {%
@@ -16,7 +16,7 @@
 	Andreas Dall Løfgren\\
 	{\tt jgc330@alumni.ku.dk}
 	\and
-	Paw Saabye\\
+	Paw Saabye Pedersen\\
 	{\tt hwx245@alumni.ku.dk}
 	\and
 	Casper B. Hansen\\
